Change Theme Color

--- a/_projects/2017-04-06-resto-bir.md
+++ b/_projects/2017-04-06-resto-bir.md
@@ -1,10 +1,10 @@
 ---
-title: "happyBIr.com"
-website: https://www.happybir.com
+title: "happybir.com"
+website: https://www.restobir.com
 layout: page
 excerpt: "Re inventing the way people get to know each other"
 image: /assets/images/subastageek.jpg
-tags: [Firebase, React.js]
+tags: [Python, WiFi AccessPoint, React.js]
 work: "Web, Mobile"
 ---
 
