--- a/_projects/2017-02-06-9-dapps-io.md
+++ b/_projects/2017-02-06-9-dapps-io.md
@@ -3,7 +3,6 @@ title: "9dapps.io"
 website: https://9dapps.com
 layout: page
 excerpt: "Save time buying pre-built apps for 9 dollars"
-image: /assets/images/subastageek.jpg
 tags: [Firebase, React.js]
 work: "Ecommerce, MEAN"
 ---
@@ -12,4 +11,4 @@ work: "Ecommerce, MEAN"
 
 Select the app that more looks like to what you want to build.
 
-We can customize it or add new features to you, but is easier and cheaper than start from ground zero or reinvent the wheel.
+If you you want we can customize it or add new features to you, but is easier and cheaper than start from ground zero.
