Change project links urls to #

--- a/_projects/2017-02-06-9-dapps-io.md
+++ b/_projects/2017-02-06-9-dapps-io.md
@@ -2,7 +2,7 @@
 title: "9dapps.io"
 website: https://9dapps.com
 layout: page
-excerpt: "Save time buying pre-built apps for 9 dollars"
+excerpt: "Apps Marketplace: Save time buying pre-built web/mobile apps for 9 dollars"
 tags: [Firebase, React.js]
 work: "Ecommerce, MEAN"
 ---
