--- a/_projects/2017-04-06-resto-bir.md
+++ b/_projects/2017-04-06-resto-bir.md
@@ -1,8 +1,8 @@
 ---
 title: "happybir.com"
-website: https://www.restobir.com
+website: https://www.happybir.io
 layout: page
-excerpt: "Re inventing the way people get to know each other"
+excerpt: ""
 image: /assets/images/subastageek.jpg
 tags: [Python, WiFi AccessPoint, React.js]
 work: "Web, Mobile"
