--- a/_projects/2017-02-06-9-dapps-io.md
+++ b/_projects/2017-02-06-9-dapps-io.md
@@ -3,6 +3,6 @@ title: "9dapps.io"
 website: https://9dapps.com
 layout: page
 excerpt: "Apps Marketplace: Save time buying pre-built web/mobile apps for 9 dollars"
-tags: [Firebase, React.js]
+tags: [AWS, Mobile, WebApps, Javascript, Angular, Ionic]
 work: "Ecommerce, MEAN"
 ---
