--- a/_projects/2017-04-06-resto-bir.md
+++ b/_projects/2017-04-06-resto-bir.md
@@ -3,13 +3,7 @@ title: "happybir.com"
 website: https://www.happybir.io
 layout: page
 excerpt: ""
-image: /assets/images/subastageek.jpg
+image: 
 tags: [Python, WiFi AccessPoint, React.js]
 work: "Web, Mobile"
 ---
-
-
-## Connect using your Facebook Account or Linkedin ##
-
-## Want to share your profile with the other attents ##
-
