Updated '_projects/2018-04-06-resto-bir.md' via CloudCannon

--- a/_projects/2018-04-06-resto-bir.md
+++ b/_projects/2018-04-06-resto-bir.md
@@ -1,6 +1,6 @@
 ---
-title: "happybir.com"
-website: https://www.happybir.io
+title: "restoBIr.com"
+website: https://www.restobir.com
 layout: page
 excerpt: ""
 image: 
