--- a/_projects/2017-02-06-9-dapps-com.md
+++ b/_projects/2017-02-06-9-dapps-com.md
@@ -1,5 +1,5 @@
 ---
-title: "9dapps.io"
+title: "9dapps.com"
 website: https://9dapps.com
 layout: page
 excerpt: "Apps Marketplace: Save time buying pre-built web/mobile apps for 9 dollars"
